force-app/main/default/objects/Archive_Sale__c/Archive_Sale__c.object-meta.xml
<CustomObject>
    <label>Archive Sale</label>
    <nameField>
        <label>Archive Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>