force-app/main/default/objects/Archive_Sale__c/fields/Car_Name__c.field-meta.xml
<CustomField>
    <fullName>Car_Name__c</fullName>
    <label>Car Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>