force-app/main/default/objects/Archive_Sale__c/fields/Car_Price__c.field-meta.xml
<CustomField>
    <fullName>Car_Price__c</fullName>
    <label>Car Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>