force-app/main/default/objects/Archive_Sale__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <label>Seller Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>